Improve route statistic legend sorting and fix contrast colors

--- a/OsmAnd/res/layout/route_details_legend.xml
+++ b/OsmAnd/res/layout/route_details_legend.xml
@@ -17,7 +17,9 @@
 		android:layout_gravity="center_vertical"
 		android:layout_marginEnd="@dimen/bottom_sheet_icon_margin"
 		android:layout_marginRight="@dimen/bottom_sheet_icon_margin"
-		tools:src="@drawable/ic_action_circle" />
+		tools:background="@drawable/circle_contour_bg_light"
+		tools:src="@drawable/ic_action_circle"
+		tools:tint="?attr/active_color_basic" />
 
 	<net.osmand.plus.widgets.TextViewEx
 		android:id="@+id/legend_text"
