--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -121,7 +121,7 @@
 	<string name="poi_emergency_infrastructure">Emergency infrastructure</string>
 	<string name="poi_transportation">Transportation</string>
 	<string name="poi_road_obstacle">Road obstacle</string>
-	<string name="poi_filling_station">Gas station</string>
+	<string name="poi_filling_station">Filling station</string>
 	<string name="poi_personal_transport">Personal transport</string>
 	<string name="poi_public_transport">Public transport</string>
 	<string name="poi_air_transport">Air transport</string>
