--- a/OsmAnd/res/layout/route_info_menu_control_buttons.xml
+++ b/OsmAnd/res/layout/route_info_menu_control_buttons.xml
@@ -36,7 +36,7 @@
 		android:layout_width="1dp"
 		android:layout_height="match_parent"
 		android:background="?attr/divider_color_basic"
-		android:visibility="gone"/>
+		android:visibility="visible"/>
 
 	<FrameLayout
 		android:id="@+id/start_button"
