Search initial commit

--- a/OsmAnd-telegram/res/layout/activity_main.xml
+++ b/OsmAnd-telegram/res/layout/activity_main.xml
@@ -28,34 +28,10 @@
 
 	</android.support.design.widget.CoordinatorLayout>
 
-	<LinearLayout
-		android:id="@+id/buttons_bar"
+	<include
+		layout="@layout/bottom_buttons_bar"
 		android:layout_width="match_parent"
-		android:layout_height="@dimen/buttons_bottom_bar_height"
-		android:background="?attr/card_bg_color"
-		android:gravity="center_vertical"
-		android:paddingLeft="@dimen/content_padding_half"
-		android:paddingRight="@dimen/content_padding_half"
-		android:visibility="gone"
-		tools:visibility="visible">
-
-		<include
-			layout="@layout/secondary_btn"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"/>
-
-		<View
-			android:layout_width="@dimen/content_padding_half"
-			android:layout_height="match_parent"/>
-
-		<include
-			layout="@layout/primary_btn"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"/>
-
-	</LinearLayout>
+		android:layout_height="@dimen/buttons_bottom_bar_height" />
 
 	<android.support.design.widget.BottomNavigationView
 		android:id="@+id/bottom_navigation"
