Profile details edit - work in progress

--- a/OsmAnd/res/layout/fragment_selected_profile.xml
+++ b/OsmAnd/res/layout/fragment_selected_profile.xml
@@ -7,12 +7,17 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   >
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_gravity="top"
+      >
 
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_gravity="top">
+    >
 
 
     <LinearLayout
@@ -330,8 +335,12 @@
         android:src="@drawable/bg_shadow_list_bottom"/>
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="64dp"/>
   </LinearLayout>
 
+  </ScrollView>
 
   <LinearLayout
     android:layout_width="match_parent"
