--- a/OsmAnd/res/layout-land/map_hud_bottom.xml
+++ b/OsmAnd/res/layout-land/map_hud_bottom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_gravity="bottom"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:osmand="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="bottom"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/bottom_controls_container"
@@ -184,18 +185,20 @@
                     android:layout_gravity="center"/>
 
             </LinearLayout>
-            
-               	<ProgressBar
-        			android:id="@+id/map_horizontal_progress"
-        			style="?android:attr/progressBarStyleHorizontal"
-        			android:layout_width="match_parent"
-        			android:layout_gravity="bottom"
-        			android:layout_height="4dp"
-        			android:max="100"
-        			android:visibility="gone"
-        			tools:progress="60"
-        			tools:visibility="visible" />
-            
+
+            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+                android:id="@+id/map_horizontal_progress"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_gravity="bottom"
+                android:max="100"
+                android:visibility="gone"
+                osmand:mpb_progressStyle="horizontal"
+                osmand:mpb_useIntrinsicPadding="false"
+                osmand:mpb_setBothDrawables="true"
+                style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
+                tools:progress="60"
+                tools:visibility="visible" />
 
         </FrameLayout>
 
