--- a/OsmAnd/res/layout/map_hud_bottom.xml
+++ b/OsmAnd/res/layout/map_hud_bottom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_gravity="bottom"
-              android:orientation="vertical">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	xmlns:osmand="http://schemas.android.com/apk/res-auto"
+	android:layout_gravity="bottom"
+	android:orientation="vertical">
 
     <!--<net.osmand.plus.quickaction.QuickActionsWidget
         android:id="@+id/quick_action_widget"
@@ -224,16 +225,20 @@
             </LinearLayout>
         </LinearLayout>
 
-		<ProgressBar
+		<me.zhanghai.android.materialprogressbar.MaterialProgressBar
 			android:id="@+id/map_horizontal_progress"
-			style="?android:attr/progressBarStyleHorizontal"
 			android:layout_width="match_parent"
 			android:layout_height="4dp"
 			android:layout_gravity="bottom"
 			android:max="100"
 			android:visibility="gone"
+			osmand:mpb_progressStyle="horizontal"
+			osmand:mpb_useIntrinsicPadding="false"
+			osmand:mpb_setBothDrawables="true"
+			style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
 			tools:progress="60"
 			tools:visibility="visible" />
+
     </FrameLayout>
 
 
