Add dimension resource for empty state screen

--- a/OsmAnd-telegram/res/layout/empty_state_search.xml
+++ b/OsmAnd-telegram/res/layout/empty_state_search.xml
@@ -10,7 +10,7 @@
 		android:id="@+id/empty_state_background_image"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="16dp"
+		android:layout_marginBottom="@dimen/content_padding_standard"
 		android:scaleType="center"
 		android:src="@drawable/img_empty_state_search" />
 
@@ -27,8 +27,8 @@
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="68dp"
-		android:layout_marginRight="68dp"
+		android:layout_marginLeft="@dimen/empty_state_descr_margin"
+		android:layout_marginRight="@dimen/empty_state_descr_margin"
 		android:background="@null"
 		android:gravity="center"
 		android:text="@string/search_contacts_descr"
