--- a/OsmAnd/res/layout/route_info_header.xml
+++ b/OsmAnd/res/layout/route_info_header.xml
@@ -121,6 +121,72 @@
 	</LinearLayout>
 
 	<LinearLayout
+		android:id="@+id/top_buttons_container"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:baselineAligned="false"
+		android:layout_marginLeft="@dimen/route_info_buttons_padding_top_bottom"
+		android:layout_marginTop="@dimen/route_info_details_padding"
+		android:layout_marginRight="@dimen/route_info_buttons_padding_top_bottom"
+		android:layout_marginBottom="@dimen/route_info_buttons_padding_top_bottom"
+		android:orientation="horizontal">
+
+		<FrameLayout
+			android:id="@+id/details_button"
+			android:layout_width="0dp"
+			android:layout_height="@dimen/route_info_buttons_height"
+			android:layout_gravity="center_vertical"
+			android:layout_weight="1"
+			android:orientation="horizontal">
+
+			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/details_button_descr"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_gravity="center"
+				android:ellipsize="end"
+				android:gravity="center"
+				android:letterSpacing="@dimen/text_button_letter_spacing"
+				android:maxLines="1"
+				android:text="@string/rendering_category_details"
+				android:textColor="?attr/active_color_basic"
+				android:textSize="@dimen/text_button_text_size"
+				osmand:typeface="@string/font_roboto_medium"
+				tools:ignore="UnusedAttribute" />
+
+		</FrameLayout>
+
+		<FrameLayout
+			android:id="@+id/start_button"
+			android:layout_width="0dp"
+			android:layout_height="@dimen/route_info_buttons_height"
+			android:layout_gravity="center_vertical"
+			android:layout_marginStart="@dimen/content_padding"
+			android:layout_marginLeft="@dimen/content_padding"
+			android:layout_weight="1"
+			android:orientation="horizontal">
+
+			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/start_button_descr"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_gravity="center"
+				android:background="?attr/selectableItemBackgroundBorderless"
+				android:ellipsize="end"
+				android:gravity="center"
+				android:letterSpacing="@dimen/text_button_letter_spacing"
+				android:maxLines="1"
+				android:text="@string/shared_string_control_start"
+				android:textColor="@color/card_and_list_background_light"
+				android:textSize="@dimen/text_button_text_size"
+				osmand:typeface="@string/font_roboto_medium"
+				tools:ignore="UnusedAttribute" />
+
+		</FrameLayout>
+
+	</LinearLayout>
+
+	<LinearLayout
 		android:id="@+id/altitude_container"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
