--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3456,5 +3456,6 @@
 	<string name="poi_rtsa_scale_filter">Категория сложности</string>
 
 	<string name="poi_flare">Газовый факел</string>
+	<string name="poi_rescue_box">Спасательный ящик</string>
 
 </resources>
