--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3935,4 +3935,6 @@
 	<string name="poi_flare">Gas flare;Flare stack</string>
 	<string name="poi_change_delete">Deleted object</string>
 
+	<string name="poi_rescue_box">Rescue box</string>
+
 </resources>
