--- a/OsmAnd/res/layout/bottom_sheet_select_type_fragment.xml
+++ b/OsmAnd/res/layout/bottom_sheet_select_type_fragment.xml
@@ -7,6 +7,7 @@
   android:orientation="vertical">
 
   <TextView
+    android:id="@+id/dialog_title"
     android:textStyle="bold"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -18,6 +19,17 @@
     android:textColor="?attr/main_font_color_basic"
     android:textSize="@dimen/default_list_text_size"/>
 
+  <TextView
+    android:id="@+id/dialog_description_text"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/list_content_padding"
+    android:paddingStart="@dimen/list_content_padding"
+    android:paddingEnd="@dimen/list_content_padding"
+    android:paddingLeft="@dimen/list_content_padding"
+    android:paddingRight="@dimen/list_content_padding"
+    android:textSize="@dimen/default_list_text_size"
+    android:visibility="gone"/>
 
   <android.support.v7.widget.RecyclerView
     android:id="@+id/menu_list_view"
