--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3457,5 +3457,7 @@
 
 	<string name="poi_flare">Газовый факел</string>
 	<string name="poi_rescue_box">Спасательный ящик</string>
+	<string name="poi_climbing_crag_filter">Место для скалолазания</string>
+	<string name="poi_climbing_crag">Да</string>
 
 </resources>
