--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -113,6 +113,7 @@
 	<string name="poi_denotation">Denotation</string>
 	<string name="poi_park_ride">Park and ride</string>
 	<string name="poi_rtsa_scale_filter">Difficulty category</string>
+	<string name="poi_climbing_crag_filter">Climbing crag</string>
 
 <!--  categories -->
 	<string name="poi_shop">Store</string>
@@ -3936,5 +3937,6 @@
 	<string name="poi_change_delete">Deleted object</string>
 
 	<string name="poi_rescue_box">Rescue box</string>
+	<string name="poi_climbing_crag">Yes</string>
 
 </resources>
