--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3678,7 +3678,7 @@
 	<string name="poi_climbing_trad_yes">Traditional: yes</string>
 	<string name="poi_climbing_trad_no">Traditional: no</string>
 	<string name="poi_climbing_multipitch_yes">Multi-pitch routes: yes</string>
-	<string name="poi_climbing_multipitch_no">Multi-pitch routes: yes</string>
+	<string name="poi_climbing_multipitch_no">Multi-pitch routes: no</string>
 	<string name="poi_climbing_ice_yes">Ice: yes</string>
 	<string name="poi_climbing_ice_no">Ice: no</string>
 	<string name="poi_climbing_mixed_yes">Mixed: yes</string>
