--- a/OsmAnd-telegram/res/layout/item_with_descr_and_right_switch.xml
+++ b/OsmAnd-telegram/res/layout/item_with_descr_and_right_switch.xml
@@ -50,6 +50,18 @@
 
 	</LinearLayout>
 
+	<ImageView
+		android:id="@+id/icon_right"
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		android:background="?attr/selectableItemBackground"
+		android:paddingLeft="@dimen/image_button_padding"
+		android:paddingRight="@dimen/image_button_padding"
+		android:visibility="gone"
+		tools:src="@drawable/ic_action_additional_option"
+		tools:tint="@color/icon_light"
+		tools:visibility="visible" />
+
 	<Switch
 		android:id="@+id/switcher"
 		android:layout_width="wrap_content"
