--- a/OsmAnd/res/layout/bottom_sheet_item_with_descr_and_radio_btn.xml
+++ b/OsmAnd/res/layout/bottom_sheet_item_with_descr_and_radio_btn.xml
@@ -12,62 +12,61 @@
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingStart="@dimen/content_padding"
     android:paddingEnd="@dimen/content_padding_small"
     android:paddingLeft="@dimen/content_padding"
     android:paddingRight="@dimen/content_padding_small"
-    android:paddingStart="@dimen/content_padding"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
 
-  <ImageView
-    android:id="@+id/icon"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/bottom_sheet_icon_margin"
-    android:layout_marginRight="@dimen/bottom_sheet_icon_margin"
-    tools:src="@drawable/ic_action_coordinates_latitude"
-    android:tint="?attr/primary_icon_color"/>
-
-  <LinearLayout
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginEnd="@dimen/content_padding"
-    android:layout_marginRight="@dimen/content_padding"
-    android:layout_weight="1"
-    android:gravity="center_vertical">
-
-
-    <TextView
-      android:id="@+id/title"
-      android:layout_width="match_parent"
+    <ImageView
+      android:id="@+id/icon"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:ellipsize="end"
-      android:maxLines="1"
-      android:textColor="?attr/main_font_color_basic"
-      android:textAppearance="@style/TextAppearance.ListItemTitle"
-      tools:text="Item Title"/>
+      android:layout_marginEnd="@dimen/bottom_sheet_icon_margin"
+      android:layout_marginRight="@dimen/bottom_sheet_icon_margin"
+      tools:tint="?attr/primary_icon_color"
+      tools:src="@drawable/ic_action_coordinates_latitude"/>
 
-    <TextView
-      android:id="@+id/subtitle"
-      android:layout_width="match_parent"
+    <LinearLayout
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:ellipsize="end"
-      android:maxLines="1"
-      tools:text="Item additional desription"/>
-  </LinearLayout>
+      android:layout_weight="1"
+      android:layout_marginEnd="@dimen/content_padding"
+      android:layout_marginRight="@dimen/content_padding"
+      android:gravity="center_vertical"
+      android:orientation="vertical">
 
 
-  <RadioButton
-    android:id="@+id/compound_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@null"
-    android:clickable="false"
-    android:focusable="false"
-    android:saveEnabled="false"/>
+      <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAppearance="@style/TextAppearance.ListItemTitle"
+        android:textColor="?attr/main_font_color_basic"
+        tools:text="Item Title"/>
+
+      <TextView
+        android:id="@+id/subtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        tools:text="Item additional desription"/>
+    </LinearLayout>
+
+
+    <RadioButton
+      android:id="@+id/compound_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:background="@null"
+      android:clickable="false"
+      android:focusable="false"
+      android:saveEnabled="false"/>
 
   </LinearLayout>
 
