--- a/OsmAnd/res/layout/fragment_selected_profile.xml
+++ b/OsmAnd/res/layout/fragment_selected_profile.xml
@@ -24,9 +24,11 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="?attr/bg_color"
-      android:orientation="vertical"
+      android:orientation="vertical">
 
-      >
+      <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
       <LinearLayout
         android:layout_width="match_parent"
@@ -89,6 +91,13 @@
         </LinearLayout>
 
       </LinearLayout>
+        <FrameLayout
+          android:id="@+id/click_block_layout"
+          android:clickable="false"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
+
+      </FrameLayout>
 
       <FrameLayout
         android:layout_width="match_parent"
