--- a/OsmAnd/res/values/colors.xml
+++ b/OsmAnd/res/values/colors.xml
@@ -480,6 +480,7 @@
 	<color name="inactive_buttons_and_links_dark">#505050</color>
 	<color name="active_buttons_and_links_trans_light">#66237bff</color>
 	<color name="active_buttons_and_links_trans_dark">#66d28521</color>
+	<color name="settings_divider">#dcdcdc</color>
 
 
 </resources>
