--- a/OsmAnd/res/layout/bottom_sheet_select_type_fragment.xml
+++ b/OsmAnd/res/layout/bottom_sheet_select_type_fragment.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:background="?attr/bg_color"
-  android:orientation="vertical">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="?attr/bg_color"
+    android:orientation="vertical">
 
   <TextView
     android:id="@+id/dialog_title"
@@ -15,7 +16,7 @@
     android:layout_marginBottom="@dimen/list_content_padding"
     android:layout_marginStart="@dimen/list_content_padding"
     android:layout_marginLeft="@dimen/list_content_padding"
-    android:text="Select navigation type"
+    tools:text="Select navigation type"
     android:textColor="?attr/main_font_color_basic"
     android:textSize="@dimen/default_list_text_size"/>
 
