fix swithcing between settings screen with selecting appropriate profiles. ui fixes.

--- a/OsmAnd/res/layout/fragment_selected_profile.xml
+++ b/OsmAnd/res/layout/fragment_selected_profile.xml
@@ -9,6 +9,7 @@
   android:layout_height="match_parent"
   >
   <ScrollView
+    android:id="@+id/scroll_view_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="top"
@@ -456,9 +457,7 @@
 
 
 
-      <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="64dp"/>
+
     </LinearLayout>
 
   </ScrollView>
