--- a/OsmAnd/res/values/sizes.xml
+++ b/OsmAnd/res/values/sizes.xml
@@ -127,6 +127,7 @@
 
 
 	<dimen name="map_widget_text_size">23sp</dimen>
+	<dimen name="map_top_widget_text_size">22sp</dimen>
 	<dimen name="map_widget_text_size_small">15sp</dimen>
 	<dimen name="map_button_text_size">18sp</dimen>
 	<dimen name="map_alarm_text_size">25sp</dimen>
@@ -223,6 +224,7 @@
 	<dimen name="bottom_sheet_content_margin_small">8dp</dimen>
 	<dimen name="content_padding">16dp</dimen>
 	<dimen name="content_padding_small">12dp</dimen>
+	<dimen name="content_padding_half">8dp</dimen>
 	<dimen name="bottom_sheet_content_padding_small">8dp</dimen>
 	<dimen name="measurement_tool_divider_margin">8dp</dimen>
 	<dimen name="measurement_tool_content_padding_medium">12dp</dimen>
