--- a/OsmAnd/res/layout-land/map_hud_top.xml
+++ b/OsmAnd/res/layout-land/map_hud_top.xml
@@ -51,9 +51,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:maxLines="1"
-                    android:textColor="@color/color_white"
+                    android:textColor="@color/activity_background_light"
                     android:textSize="@dimen/map_top_widget_text_size"
-                    android:textStyle="bold"
+                    tools:textStyle="bold"
                     tools:text="N 20°96′60″" />
 
             </LinearLayout>
@@ -91,11 +91,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:ellipsize="end"
                     android:maxLines="1"
-                    android:textColor="@color/color_white"
+                    android:textColor="@color/activity_background_light"
                     android:textSize="@dimen/map_top_widget_text_size"
-                    android:textStyle="bold"
+                    tools:textStyle="bold"
                     tools:text="W 120°31′12″" />
 
             </LinearLayout>
